Simple working version of creating dialog for choosing Scala files

--- a/scaladesigner/src/main/conf/module.properties
+++ b/scaladesigner/src/main/conf/module.properties
@@ -16,3 +16,148 @@ CreateElementDiagramCommandExampleLabel=Diagram element creation example
 CreateElementDiagramCommandExampleTooltip=Diagram element creation example
 CreateElementDiagramCommandExampleName=Diagram Element
 
+
+BuildAntFile.group      =
+BuildAntFile.groupimage =
+BuildAntFile.label      = Compile
+BuildAntFile.tooltip    = Compile
+
+CreateAntArtifact.group      =
+CreateAntArtifact.groupimage =
+CreateAntArtifact.label      = Create a compilation artifact
+CreateAntArtifact.tooltip    = Create a compilation artifact
+
+CreateAssociationEndProperty.group      =
+CreateAssociationEndProperty.groupimage =
+CreateAssociationEndProperty.label      = Create a java association end property
+CreateAssociationEndProperty.tooltip    = Create a java association end property
+
+CreateAttributeProperty.group      =
+CreateAttributeProperty.groupimage =
+CreateAttributeProperty.label      = Create a java attribute property
+CreateAttributeProperty.tooltip    = Create a java attribute property
+
+CreateAutoDiagrams.group      =
+CreateAutoDiagrams.groupimage =
+CreateAutoDiagrams.label      = Create/Update auto-diagrams
+CreateAutoDiagrams.tooltip    = Create auto-diagrams
+
+CreateDiagrams.group   = Create diagram
+CreateDiagrams.label   = CreateDiagrams
+CreateDiagrams.tooltip =
+
+CreateJavaResource.group      =
+CreateJavaResource.groupimage =
+CreateJavaResource.label      = Create a java resource file
+CreateJavaResource.tooltip    = Create a java resource file
+
+CreatePlugin.group      =
+CreatePlugin.groupimage =
+CreatePlugin.label      = Create a java component
+CreatePlugin.tooltip    = Create a java component
+
+CreateStandardMethods.group      =
+CreateStandardMethods.groupimage =
+CreateStandardMethods.label      = Create standard methods
+CreateStandardMethods.tooltip    = Create methods "equals", "hashCode" and "toString"
+
+DeployRamc.group      = Configuration
+DeployRamc.groupimage = res/bmp/config.png
+DeployRamc.label      = Deploy a model component
+DeployRamc.tooltip    = Deploy a model component
+
+Edit.group               =
+Edit.groupimage          =
+Edit.label               = Edit
+Edit.tooltip             = Edit
+
+EditClasspath.group      = Configuration
+EditClasspath.groupimage = res/bmp/config.png
+EditClasspath.label      = Edit accessible classes
+EditClasspath.tooltip    = Java Reverse
+
+EditProperties.group   =
+EditProperties.label   = Edit properties
+EditProperties.tooltip = Edit properties
+
+ExecuteAntTarget.group      =
+ExecuteAntTarget.groupimage =
+ExecuteAntTarget.label      = Execute Ant target
+ExecuteAntTarget.tooltip    = Execute Ant target
+
+Generate.group             =
+Generate.groupimage        =
+Generate.label             = Generate
+Generate.tooltip           = Generate
+
+GenerateAntFile.group      =
+GenerateAntFile.groupimage =
+GenerateAntFile.label      = Generate Ant file
+GenerateAntFile.tooltip    = Generate Ant file
+
+JavaDocGenerate.group      =
+JavaDocGenerate.groupimage =
+JavaDocGenerate.label      = Generate the JavaDoc
+JavaDocGenerate.tooltip    = Generate the JavaDoc
+
+LoadCustomizationFile.group      = Configuration
+LoadCustomizationFile.groupimage = res/bmp/config.png
+LoadCustomizationFile.label      = Load customization file
+LoadCustomizationFile.tooltip    = Load customization file
+
+Operation_createSeeLink.group   =
+Operation_createSeeLink.label   = createSeeLink
+Operation_createSeeLink.tooltip =
+
+PropertyPage.label = Java
+
+ReverseBinary.group      = Reverse
+ReverseBinary.groupimage = res/bmp/reverse.png
+ReverseBinary.label      = Reverse Java binaries
+ReverseBinary.tooltip    = Reverse Java binaries
+
+ReverseSources.group      = Reverse
+ReverseSources.groupimage = res/bmp/reverse.png
+ReverseSources.label      = Reverse Java application from sources
+ReverseSources.tooltip    = Reverse Java application from sources
+
+RunApplication.group      =
+RunApplication.groupimage =
+RunApplication.label      = Run application
+RunApplication.tooltip    = Run application
+
+UpdateClassFromInterfaces.group      =
+UpdateClassFromInterfaces.groupimage =
+UpdateClassFromInterfaces.label      = Update from implemented interfaces
+UpdateClassFromInterfaces.tooltip    = Update from implemented interfaces
+
+UpdateClassesFromInterface.group      =
+UpdateClassesFromInterface.groupimage =
+UpdateClassesFromInterface.label      = Update classes implementing this interface
+UpdateClassesFromInterface.tooltip    = Update classes implementing this interface
+
+UpdateModel.group      =
+UpdateModel.groupimage =
+UpdateModel.label      = Update model from sources if necessary
+UpdateModel.tooltip    = Update model from sources if necessary
+
+VisualizeJavaDoc.group      =
+VisualizeJavaDoc.groupimage =
+VisualizeJavaDoc.label      = Visualize the JavaDoc
+VisualizeJavaDoc.tooltip    = Visualize the JavaDoc
+
+createSeeLink.group   =
+createSeeLink.label   = createSeeLink
+createSeeLink.tooltip =
+
+eventListener.label = JavaPatterns_EventListener
+
+eventSource.label = JavaPatterns_EventSource
+
+importDemo.label = Java_Demo_Import
+
+rmi.label = JavaPatterns_RMI
+
+toNonPrimitive.label = Java_Pattern_ToNonElementary
+
+toPrimitive.label = Java_Pattern_ToElementary
