--- a/scaladesigner/pom.xml
+++ b/scaladesigner/pom.xml
@@ -39,6 +39,11 @@
 			<type>pom</type>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.modelio.module</groupId>
+			<artifactId>xmlreverse</artifactId>
+			<version>3.0.13</version>
+		</dependency>
 
 		<!-- Library inclusion example -->
 		<dependency>
@@ -46,6 +51,7 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
+
 	</dependencies>
 
 
