Messages for Scala instead of Java

--- a/scaladesigner/src/main/conf/module.properties
+++ b/scaladesigner/src/main/conf/module.properties
@@ -29,13 +29,13 @@ CreateAntArtifact.tooltip    = Create a compilation artifact
 
 CreateAssociationEndProperty.group      =
 CreateAssociationEndProperty.groupimage =
-CreateAssociationEndProperty.label      = Create a java association end property
-CreateAssociationEndProperty.tooltip    = Create a java association end property
+CreateAssociationEndProperty.label      = Create a Scala association end property
+CreateAssociationEndProperty.tooltip    = Create a Scala association end property
 
 CreateAttributeProperty.group      =
 CreateAttributeProperty.groupimage =
-CreateAttributeProperty.label      = Create a java attribute property
-CreateAttributeProperty.tooltip    = Create a java attribute property
+CreateAttributeProperty.label      = Create a Scala attribute property
+CreateAttributeProperty.tooltip    = Create a Scala attribute property
 
 CreateAutoDiagrams.group      =
 CreateAutoDiagrams.groupimage =
@@ -46,15 +46,15 @@ CreateDiagrams.group   = Create diagram
 CreateDiagrams.label   = CreateDiagrams
 CreateDiagrams.tooltip =
 
-CreateJavaResource.group      =
-CreateJavaResource.groupimage =
-CreateJavaResource.label      = Create a java resource file
-CreateJavaResource.tooltip    = Create a java resource file
+CreateScalaResource.group      =
+CreateScalaResource.groupimage =
+CreateScalaResource.label      = Create a Scala resource file
+CreateScalaResource.tooltip    = Create a Scala resource file
 
 CreatePlugin.group      =
 CreatePlugin.groupimage =
-CreatePlugin.label      = Create a java component
-CreatePlugin.tooltip    = Create a java component
+CreatePlugin.label      = Create a Scala component
+CreatePlugin.tooltip    = Create a Scala component
 
 CreateStandardMethods.group      =
 CreateStandardMethods.groupimage =
@@ -74,7 +74,7 @@ Edit.tooltip             = Edit
 EditClasspath.group      = Configuration
 EditClasspath.groupimage = res/bmp/config.png
 EditClasspath.label      = Edit accessible classes
-EditClasspath.tooltip    = Java Reverse
+EditClasspath.tooltip    = Scala Reverse
 
 EditProperties.group   =
 EditProperties.label   = Edit properties
@@ -95,10 +95,10 @@ GenerateAntFile.groupimage =
 GenerateAntFile.label      = Generate Ant file
 GenerateAntFile.tooltip    = Generate Ant file
 
-JavaDocGenerate.group      =
-JavaDocGenerate.groupimage =
-JavaDocGenerate.label      = Generate the JavaDoc
-JavaDocGenerate.tooltip    = Generate the JavaDoc
+ScalaDocGenerate.group      =
+ScalaDocGenerate.groupimage =
+ScalaDocGenerate.label      = Generate the ScalaDoc
+ScalaDocGenerate.tooltip    = Generate the ScalaDoc
 
 LoadCustomizationFile.group      = Configuration
 LoadCustomizationFile.groupimage = res/bmp/config.png
@@ -109,17 +109,17 @@ Operation_createSeeLink.group   =
 Operation_createSeeLink.label   = createSeeLink
 Operation_createSeeLink.tooltip =
 
-PropertyPage.label = Java
+PropertyPage.label = Scala
 
 ReverseBinary.group      = Reverse
 ReverseBinary.groupimage = res/bmp/reverse.png
-ReverseBinary.label      = Reverse Java binaries
-ReverseBinary.tooltip    = Reverse Java binaries
+ReverseBinary.label      = Reverse Scala binaries
+ReverseBinary.tooltip    = Reverse Scala binaries
 
 ReverseSources.group      = Reverse
 ReverseSources.groupimage = res/bmp/reverse.png
-ReverseSources.label      = Reverse Java application from sources
-ReverseSources.tooltip    = Reverse Java application from sources
+ReverseSources.label      = Reverse Scala application from sources
+ReverseSources.tooltip    = Reverse Scala application from sources
 
 RunApplication.group      =
 RunApplication.groupimage =
@@ -141,23 +141,23 @@ UpdateModel.groupimage =
 UpdateModel.label      = Update model from sources if necessary
 UpdateModel.tooltip    = Update model from sources if necessary
 
-VisualizeJavaDoc.group      =
-VisualizeJavaDoc.groupimage =
-VisualizeJavaDoc.label      = Visualize the JavaDoc
-VisualizeJavaDoc.tooltip    = Visualize the JavaDoc
+VisualizeScalaDoc.group      =
+VisualizeScalaDoc.groupimage =
+VisualizeScalaDoc.label      = Visualize the ScalaDoc
+VisualizeScalaDoc.tooltip    = Visualize the ScalaDoc
 
 createSeeLink.group   =
 createSeeLink.label   = createSeeLink
 createSeeLink.tooltip =
 
-eventListener.label = JavaPatterns_EventListener
+eventListener.label = ScalaPatterns_EventListener
 
-eventSource.label = JavaPatterns_EventSource
+eventSource.label = ScalaPatterns_EventSource
 
-importDemo.label = Java_Demo_Import
+importDemo.label = Scala_Demo_Import
 
-rmi.label = JavaPatterns_RMI
+rmi.label = ScalaPatterns_RMI
 
-toNonPrimitive.label = Java_Pattern_ToNonElementary
+toNonPrimitive.label = Scala_Pattern_ToNonElementary
 
-toPrimitive.label = Java_Pattern_ToElementary
+toPrimitive.label = Scala_Pattern_ToElementary
