--- a/scaladesigner/pom.xml
+++ b/scaladesigner/pom.xml
@@ -52,6 +52,19 @@
 			<version>3.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>edu.kulikov</groupId>
+			<artifactId>scala-ast-parser</artifactId>
+			<version>0.5</version>
+		</dependency>
+
+
 	</dependencies>
 
 
