--- a/scaladesigner/pom.xml
+++ b/scaladesigner/pom.xml
@@ -59,9 +59,22 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>edu.kulikov</groupId>
 			<artifactId>scala-ast-parser</artifactId>
-			<version>0.5</version>
+			<version>0.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.13</version>
 		</dependency>
 
 
