Add creating of objects, traits and case classes Add stereotypes with icons for package, class, case class (no icon), trait and object

--- a/scaladesigner/src/main/conf/module.properties
+++ b/scaladesigner/src/main/conf/module.properties
@@ -62,7 +62,7 @@ CreateStandardMethods.label      = Create standard methods
 CreateStandardMethods.tooltip    = Create methods "equals", "hashCode" and "toString"
 
 DeployRamc.group      = Configuration
-DeployRamc.groupimage = res/bmp/config.png
+DeployRamc.groupimage = res/png/config.png
 DeployRamc.label      = Deploy a model component
 DeployRamc.tooltip    = Deploy a model component
 
@@ -72,7 +72,7 @@ Edit.label               = Edit
 Edit.tooltip             = Edit
 
 EditClasspath.group      = Configuration
-EditClasspath.groupimage = res/bmp/config.png
+EditClasspath.groupimage = res/png/config.png
 EditClasspath.label      = Edit accessible classes
 EditClasspath.tooltip    = Scala Reverse
 
@@ -101,7 +101,7 @@ ScalaDocGenerate.label      = Generate the ScalaDoc
 ScalaDocGenerate.tooltip    = Generate the ScalaDoc
 
 LoadCustomizationFile.group      = Configuration
-LoadCustomizationFile.groupimage = res/bmp/config.png
+LoadCustomizationFile.groupimage = res/png/config.png
 LoadCustomizationFile.label      = Load customization file
 LoadCustomizationFile.tooltip    = Load customization file
 
@@ -112,12 +112,12 @@ Operation_createSeeLink.tooltip =
 PropertyPage.label = Scala
 
 ReverseBinary.group      = Reverse
-ReverseBinary.groupimage = res/bmp/reverse.png
+ReverseBinary.groupimage = res/png/reverse.png
 ReverseBinary.label      = Reverse Scala binaries
 ReverseBinary.tooltip    = Reverse Scala binaries
 
 ReverseSources.group      = Reverse
-ReverseSources.groupimage = res/bmp/reverse.png
+ReverseSources.groupimage = res/png/reverse.png
 ReverseSources.label      = Reverse Scala application from sources
 ReverseSources.tooltip    = Reverse Scala application from sources
 
